--- a/NBi.Xml/NBi.Xml.csproj
+++ b/NBi.Xml/NBi.Xml.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Items\Rest\LocationXml.cs" />
     <Compile Include="Items\Rest\RestParameterXml.cs" />
     <Compile Include="Items\Rest\RestXml.cs" />
+    <Compile Include="Items\ResultSet\ItemXml.cs" />
     <Compile Include="Items\SharedDatasetXml.cs" />
     <Compile Include="Items\ResultSet\TransformationXml.cs" />
     <Compile Include="Items\UrlXml.cs" />
