--- a/NBi.Testing/NBi.Testing.csproj
+++ b/NBi.Testing/NBi.Testing.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Unit\Core\Report\FileParserTest.cs" />
     <Compile Include="Unit\Core\Rest\RestClientFactoryTest.cs" />
     <Compile Include="Unit\Core\Rest\UriParametersBuilderTest.cs" />
+    <Compile Include="Unit\Core\ResultSet\Comparer\ArrayComparerTest.cs" />
     <Compile Include="Unit\Core\ResultSet\KeyCollectionTest.cs" />
     <Compile Include="Unit\Core\ResultSet\Comparer\BooleanComparerTest.cs" />
     <Compile Include="Unit\Core\ResultSet\Comparer\DateTimeRoundingTest.cs" />
