--- a/NBi.Core/NBi.Core.csproj
+++ b/NBi.Core/NBi.Core.csproj
@@ -52,6 +52,9 @@
     <Reference Include="Antlr4.StringTemplate">
       <HintPath>..\packages\Antlr4.StringTemplate.4.0.6.9004\lib\net35\Antlr4.StringTemplate.dll</HintPath>
     </Reference>
+    <Reference Include="EPPlus, Version=4.1.0.0, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.1.0\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AnalysisServices.AdomdClient, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AnalysisServices.AdomdClient.12.0.2000.8\lib\net40\Microsoft.AnalysisServices.AdomdClient.dll</HintPath>
       <Private>True</Private>
@@ -117,6 +120,8 @@
     <Compile Include="Connection\IConnectionWaitCommand.cs" />
     <Compile Include="Connection\ConnectionWaitCommand.cs" />
     <Compile Include="Connection\ConnectionWaitFactory.cs" />
+    <Compile Include="ExcelDefinition.cs" />
+    <Compile Include="ExcelReader.cs" />
     <Compile Include="CsvWriter.cs" />
     <Compile Include="Batch\BatchRunnerFactory.cs" />
     <Compile Include="Batch\IBatchCommand.cs" />
