Added Folder Delete Command

--- a/NBi.Core/NBi.Core.csproj
+++ b/NBi.Core/NBi.Core.csproj
@@ -156,10 +156,14 @@
     <Compile Include="FileManipulation\FileManipulationFactory.cs" />
     <Compile Include="FileManipulation\IFileManipulationFactory.cs" />
     <Compile Include="FileManipulation\IFileManipulationCommand.cs" />
-    <Compile Include="FileManipulation\IDeleteCommand.cs" />
-    <Compile Include="FileManipulation\DeleteCommand.cs" />
-    <Compile Include="FileManipulation\CopyCommand.cs" />
-    <Compile Include="FileManipulation\ICopyCommand.cs" />
+    <Compile Include="FileManipulation\IFileDeleteCommand.cs" />
+    <Compile Include="FileManipulation\FileDeleteCommand.cs" />
+    <Compile Include="FileManipulation\FileCopyCommand.cs" />
+    <Compile Include="FileManipulation\IFileCopyCommand.cs" />
+    <Compile Include="FolderManipulation\FolderManipulationFactory.cs" />
+    <Compile Include="FolderManipulation\FolderDeleteCommand.cs" />
+    <Compile Include="FolderManipulation\IFolderManipulationCommand.cs" />
+    <Compile Include="FolderManipulation\IFolderDeleteCommand.cs" />
     <Compile Include="GroupCommand.cs" />
     <Compile Include="GroupCommandFactory.cs" />
     <Compile Include="IExecutionResult.cs" />
